# mission-critical

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
demo/: paradigm_like.csv
mission_critical/: __init__.py  tolerance_config.py
mission_critical/baseline/: __init__.py  cli.py  pytest_regressions_adapter.py  rocrate.py  store.py
mission_critical/diffmeta/: __init__.py  cli.py  engine.py
mission_critical/provenance/: __init__.py  cli.py  prov.py  store.py
tests/: test_baseline.py  test_claim_id.py  test_diffmeta.py  test_diffmeta_re.py  test_portability_contracts.py  test_prov_export.py  test_provenance.py  test_pytest_regressions_adapter.py  test_rocrate_export.py  test_tolerance_config.py
