[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mission-critical"
version = "0.2.0"
description = "Moon-mission-grade guards for scientific meta-analysis workflows."
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Mahmood Ahmad" }]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",  # REML optimization + t-distribution CDF
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-timeout>=2.0"]
# Optional interoperability extras. Each is independently pip-installable.
# `pip install mission-critical[interop]` pulls them all.
yaml = ["PyYAML>=6.0"]                        # ToleranceConfig + pytest-regressions adapter
rocrate = ["rocrate>=0.15"]                   # baseline export rocrate
pytest-regressions = ["PyYAML>=6.0"]          # adapter only needs yaml
interop = ["PyYAML>=6.0", "rocrate>=0.15"]    # all of the above

[project.scripts]
diffmeta = "mission_critical.diffmeta.cli:main"
provenance = "mission_critical.provenance.cli:main"
baseline = "mission_critical.baseline.cli:main"

[tool.setuptools.packages.find]
include = ["mission_critical*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "B", "C4", "I", "N", "UP", "SIM", "PIE", "RET", "RUF"]
ignore = ["E501", "B011", "N812", "SIM108"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B", "N802", "N803", "N806", "RUF"]
"conftest.py" = ["B", "N802", "N803", "N806"]
